# SPCrime

./: LICENSE  README.md  manifest.in  pyproject.toml
examples/: hospitals.txt
src/SPCrime/: SPCrime.py
src/SPCrime/data/cep/: sp.cepaberto_parte_1.csv  sp.cepaberto_parte_2.csv  sp.cepaberto_parte_3.csv  sp.cepaberto_parte_4.csv  sp.cepaberto_parte_5.csv
src/SPCrime/data/crime/: .gitattributes  2022.xlsx  2023.xlsx
tutorials/pt-br/merge_por_cidade/: obitos_causas_evitaveis.ipynb  obitos_causas_evitaveis.xlsx
